# RagDocs

./: .gitignore  README.md  pyproject.toml
data/qdrant_docs/documentation/frameworks/: autogen.md
frontend/: next.config.ts
frontend/src/app/: layout.tsx
frontend/src/app/(chat)/: layout.tsx  page.tsx
frontend/src/app/(chat)/chat/[id]/: page.tsx
frontend/src/components/custom/: chat.tsx  markdown.tsx  message.tsx  sidebar-history.tsx
frontend/src/components/ui/: badge.tsx  collapsible.tsx  dialog.tsx
frontend/src/lib/: utils.ts
frontend/src/lib/hooks/: use-chat.ts
milvus/: readme.md
ragdocs_api/: conversation_api.py  file_tracker.py  llm_provider.py  logger_config.py  markdown_processor.py  rag_system.py
ragdocs_frontend/: package.json  tailwind.config.ts
ragdocs_frontend/src/app/(chat)/api/chat/: route.ts
ragdocs_frontend/src/app/(chat)/api/history/: route.ts
ragdocs_frontend/src/components/custom/: app-sidebar.tsx  chat-header.tsx  chat-input.tsx  chat-overview.tsx  loading-messages.tsx  message-actions.tsx  sidebar-user-nav.tsx
ragdocs_frontend/src/lib/hooks/: use-history.ts
ragdocs_frontend/src/types/: chat.ts
