[tool.poetry]
name = "ragdocs"
version = "0.1.0"
description = "A RAG-powered chatbot for technical documentation. Chat with your docs using state-of-the-art retrieval augmented generation and local LLMs."
authors = ["Alexis Balayre <alexis@balayre.com>"]
readme = "README.md"
keywords = ["rag", "documentation", "chatbot", "vector-database", "llm", "local-llm", "milvus"]

packages = [
    { include = "ragdocs_api" } 
]


[tool.poetry.dependencies]
python = "^3.12"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.10"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anthropic = "0.39.0"
anyio = "4.6.2.post1"
attrs = "24.2.0"
beautifulsoup4 = "4.12.3"
boto3 = "1.35.57"
botocore = "1.35.57"
cachetools = "5.5.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
dataclasses-json = "0.6.7"
deprecated = "1.2.14"
dirtyjson = "1.0.8"
distro = "1.9.0"
environs = "9.5.0"
fastapi = "0.115.4"
filelock = "3.16.1"
frozenlist = "1.5.0"
fsspec = "2024.10.0"
google-auth = "2.36.0"
greenlet = "3.1.1"
grpcio = "1.67.1"
h11 = "0.14.0"
httpcore = "1.0.6"
httptools = "0.6.4"
httpx = "0.27.2"
huggingface-hub = "0.26.2"
idna = "3.10"
instructorembedding = "1.0.1"
jinja2 = "3.1.4"
jiter = "0.7.0"
jmespath = "1.0.1"
joblib = "1.4.2"
llama-cloud = "0.1.4"
llama-index = "0.11.22"
llama-index-agent-openai = "0.3.4"
llama-index-cli = "0.3.1"
llama-index-core = "0.11.22"
llama-index-embeddings-huggingface = "0.3.1"
llama-index-embeddings-instructor = "0.2.1"
llama-index-embeddings-openai = "0.2.5"
llama-index-indices-managed-llama-cloud = "0.4.0"
llama-index-legacy = "0.9.48.post4"
llama-index-llms-anthropic = "0.4.0"
llama-index-llms-ollama = "0.3.6"
llama-index-llms-openai = "0.2.16"
llama-index-multi-modal-llms-openai = "0.2.3"
llama-index-program-openai = "0.2.0"
llama-index-question-gen-openai = "0.2.0"
llama-index-readers-file = "0.2.2"
llama-index-readers-llama-parse = "0.3.0"
llama-parse = "0.5.13"
markdown = "3.7"
markupsafe = "3.0.2"
marshmallow = "3.23.1"
milvus-lite = "2.4.10"
mpmath = "1.3.0"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
nest-asyncio = "1.6.0"
networkx = "3.4.2"
nltk = "3.9.1"
numpy = "1.26.4"
ollama = "0.3.3"
openai = "1.54.3"
packaging = "24.2"
pandas = "2.2.3"
pillow = "11.0.0"
propcache = "0.2.0"
protobuf = "5.28.3"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.1"
pydantic = "2.9.2"
pydantic-settings = "2.6.1"
pydantic-core = "2.23.4"
pymilvus = "2.4.9"
pypdf = "4.3.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-frontmatter = "1.1.0"
pytz = "2024.2"
pyyaml = "6.0.2"
regex = "2024.11.6"
requests = "2.32.3"
rsa = "4.9"
s3transfer = "0.10.3"
safetensors = "0.4.5"
scikit-learn = "1.5.2"
scipy = "1.14.1"
sentence-transformers = "2.7.0"
setuptools = "75.3.0"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.6"
sqlalchemy = "2.0.36"
starlette = "0.41.2"
striprtf = "0.0.26"
sympy = "1.13.1"
tenacity = "8.5.0"
threadpoolctl = "3.5.0"
tiktoken = "0.8.0"
tokenizers = "0.20.3"
torch = "2.5.1"
tqdm = "4.67.0"
transformers = "4.46.2"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
tzdata = "2024.2"
ujson = "5.10.0"
urllib3 = "2.2.3"
uvicorn = "0.32.0"
uvloop = "0.21.0"
watchfiles = "0.24.0"
websockets = "14.0"
wrapt = "1.16.0"
yarl = "1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
